Translating home page

--- a/content/404.md
+++ b/content/404.md
@@ -1,9 +1,9 @@
 ---
 layout: single
-title: Page Not Found
+title: Страницата не е намерена
 permalink: 404.html
 ---
 
-We couldn't find what you were looking for.
+Не можем да намерим това, което търсите.
 
-Please contact the owner of the site that linked you to the original URL and let them know their link is broken.
+Моля, свържете се със собственика на сайта, който ви е свързал с оригиналния URL адрес, и го уведомете, че връзката им не работи.
